# onboarding

./: README.md
src/my_interface/: CMakeLists.txt  package.xml
src/my_interface/srv/: StringService.srv
src/service_pkg/: package.xml  setup.cfg  setup.py
src/service_pkg/service_pkg/: num_cli.py  num_serv.py  str_cli.py  str_serv.py
src/topic_pkg/: package.xml  setup.py
src/topic_pkg/topic_pkg/: num_pub.py  num_pub_timer.py  num_sub.py  str_pub.py  str_sub.py
